creusot/tests/should_fail/prusti/adt/same_pair_zombie.stderr
error[creusot]: expected `SamePair<std::boxed::Box<u32>>` found `SamePair<creusot_contracts::prusti::Zombie<std::boxed::Box<u32>>>`
 --> same_pair_zombie.rs:9:5
  |
9 |     SamePair(at::<'x>(x), y)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

